microk8s/infrastructure/installation/ingress/user-bff-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: user-bff-ingressroute
  namespace: user-bff-dev
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`demo-dev.manhlam.name.vn`) && PathPrefix(`/graphql`)
      kind: Rule
      services:
        - name: user-bff-svc # name of Service in app BFF
          port: 3001 # Port in Cluster that BFF app is running
      # If you use Traefik Middleware to call OPA, add the following lines
      middlewares:
        - name: opa-auth # Name Middleware OPA in Traefik
          namespace: opa-dev
