microk8s/infrastructure/installation/ingress/user-fe-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: user-fe-ingressroute
  namespace: user-fe-dev
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`demo-dev.manhlam.name.vn`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: user-fe-svc # name of Service in app frontend
          port: 3000 # Port in Cluster that frontend app is running
      # If you use Traefik Middleware to call OPA, add the following lines
      # middlewares:
      #   - name: opa-auth # Name of Middleware OPA in Traefik
      #     namespace: opa-dev
